--- a/media_queries.css
+++ b/media_queries.css
@@ -9,9 +9,9 @@
     }
 
     
-    .search-place, .search {
+/*     .search-place, .search {
         border-radius: 10px;
-    }
+    } */
 
     .fa-solid.fa-location-dot {
         outline: none;
